--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "lint": "eslint src --fix --ext .ts,.tsx,.js,.jsx,.vue",
     "prettier": "./node_modules/prettier/bin-prettier.js . --write",
     "check": "vue-tsc && yarn lint && yarn prettier",
-    "lint-staged": "lint-staged",
     "prepare": "husky install"
   },
   "keywords": [],
@@ -25,27 +24,17 @@
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-vue": "^9.15.1",
-    "husky": "^8.0.3",
+    "husky": "^8.0.0",
     "less": "^4.1.3",
     "less-loader": "^11.1.3",
     "lint-staged": "^13.2.3",
     "typescript": "^5.1.6",
     "vite": "^4.4.3",
-    "vue-tsc": "^1.8.4"
+    "vue-tsc": "^1.8.4",
+    "prettier": "^2.8.8"
   },
   "dependencies": {
     "vue": "^3.3.4",
     "vue-router": "^4.2.4"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
-  },
-  "lint-staged": {
-    "*.{js,jsx,vue,ts,tsx}": [
-      "yarn check",
-      "git add"
-    ]
   }
 }
