--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,12 +8,8 @@
     "outDir": "./dist/",
     "baseUrl": ".",
     "paths": {
-      "components/*": [
-        "src/components/*"
-      ],
-      "@/*": [
-        "src/*"
-      ],
+      "components/*": ["src/components/*"],
+      "@/*": ["src/*"]
     },
 
     /* Bundler mode */
