--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "lint": "eslint src --fix --ext .ts,.tsx,.js,.jsx,.vue",
     "prettier": "prettier . --write",
     "check": "vue-tsc && yarn lint && yarn prettier",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "lint-staged": "lint-staged"
   },
   "keywords": [],
   "author": "xiaohuaye",
@@ -28,12 +29,13 @@
     "less": "^4.1.3",
     "less-loader": "^11.1.3",
     "lint-staged": "^13.2.3",
+    "prettier": "^2.8.8",
     "typescript": "^5.1.6",
     "vite": "^4.4.3",
-    "vue-tsc": "^1.8.4",
-    "prettier": "^2.8.8"
+    "vue-tsc": "^1.8.4"
   },
   "dependencies": {
+    "pinia": "^2.1.4",
     "vue": "^3.3.4",
     "vue-router": "^4.2.4"
   }
