--- a/package.json
+++ b/package.json
@@ -5,13 +5,16 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vue-tsc --noEmit && vite build",
+    "tsc": "vue-tsc --noEmit",
+    "build": "tsc && vite build",
     "preview": "vite preview",
     "lint": "eslint src --fix --ext .ts,.tsx,.js,.jsx,.vue",
     "prettier": "prettier . --write",
-    "check": "vue-tsc && yarn lint && yarn prettier",
+    "check": "tsc && lint && prettier",
     "prepare": "husky install",
-    "lint-staged": "lint-staged"
+    "lint-staged": "lint-staged",
+    "test": "vitest",
+    "coverage": "vitest run --coverage"
   },
   "keywords": [],
   "author": "xiaohuaye",
@@ -21,6 +24,7 @@
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "@vitejs/plugin-vue": "^4.2.3",
+    "@vitest/coverage-v8": "^0.34.5",
     "eslint": "^8.44.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-import": "^2.27.5",
@@ -33,6 +37,7 @@
     "prettier": "^2.8.8",
     "typescript": "^5.1.6",
     "vite": "^4.4.3",
+    "vitest": "^0.34.5",
     "vue-tsc": "^1.8.4"
   },
   "dependencies": {
